--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/router": "^14.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.10.2",
+    "angular-notifier": "^11.0.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "ng-angular-popup": "^0.1.2",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.24",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
