--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
     "daisyui": "^2.22.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
